# h-wallpaper

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  libs-schema.yaml  libs.yaml  package.json  pnpm-lock.yaml  pre-config.h.in  setup.cmd  tsconfig.json
app/: CMakeLists.txt  file-utils.cc  main.cpp  video-decoder.cc  wallpaper-window.cpp  wnd-utils.cc
app/include/: drawer.h  image-util.h  resources.h  string-table.h  sys-err.h  video-decoder.h  wallpaper-window.h
app/include/drawers/: drawer.h  video-drawer.h
app/include/wallpapers/: video-wallpaper.h  wallpaper.h
app/resources/: resources.rc
app/src/: config.cc  drawer.cc  file-utils.cc  image-util.cc  main.cpp  sys-err.cc  video-decoder.cc  wallpaper-window.cpp
app/src/drawers/: drawer.cc  video-drawer.cc
app/src/wallpapers/: video-wallpaper.cc  wallpaper.cc
cmake/: Findcpp-httplib.cmake  Findffmpeg.cmake  Findjsoncpp.cmake  Findlibyaml.cmake  Findopenssl.cmake  Findskia.cmake  Finduyaml.cmake  Findyaml-cpp.cmake  libs.cmake  licenses.cmake
include/: color.h  config.h  def.h  dll.h  file-utils.h  pre.h  str-utils.h  video-decoder.h  wallpaper-window.h  wnd-utils.h
resources/: resources.rc
scripts/: git-lib.ts  type.ts  update.ts  vars.ts  zip-lib.ts
src/: main.cpp  video-decoder.cc  wallpaper-window.cpp
updater/: CMakeLists.txt
updater/include/: DesktopNotificationManagerCompat.h  github.h  json.h  updater-str-util.h
updater/src/: DesktopNotificationManagerCompat.cpp  json.cc  main.cpp
utils/: CMakeLists.txt
utils/include/: file-utils.h  str-utils.h  string-table.h  sys-err.h
utils/src/: file-utils.cc  str-utils.cc  string-table.cc  sys-err.cc
